namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-challenge-support-intervention-plan-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-challenge-support-intervention-plan-prod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "ask-live-services-maintenance-team"
    cloud-platform.justice.gov.uk/application: "HMPPS Challenge Support Intervention Plan"
    cloud-platform.justice.gov.uk/owner: "Live Services Maintenance: HMPPSLiveServicesMaintenanceTeam@JusticeUK.onmicrosoft.com"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-challenge-support-intervention-plan-api"
    cloud-platform.justice.gov.uk/team-name: "manage-safety"
    cloud-platform.justice.gov.uk/slack-alert-channel: "maintenance-alerts-prod"
    cloud-platform.justice.gov.uk/service-area: "Live Support"
